# Computer

./: CMakeLists.txt  ICLoader.cpp  ICLoader.h  logic.cpp  logic.h  main.cpp
utils/: FULLADDER.component  add.sh  adder_gen.py  inputter.py  outputReader.py
utils/components/: 25BITADDER.component  35BITADDER.component  4BITADDER.component  8BITADDER.component
